RESOLVED FIXED193774
[JSC] SharedArrayBufferConstructor and ArrayBufferConstructor should not have their own IsoSubspace
https://bugs.webkit.org/show_bug.cgi?id=193774
Summary [JSC] SharedArrayBufferConstructor and ArrayBufferConstructor should not have...
Yusuke Suzuki
Reported 2019-01-24 11:29:01 PST
Too costly. Use InternalFunction's one instead. We need to make sizeof(SharedArrayBufferConstructor) == sizeof(InternalFunction).
Attachments
Patch (16.28 KB, patch)
2019-01-24 16:24 PST, Yusuke Suzuki
mark.lam: review+
Yusuke Suzuki
Comment 1 2019-01-24 16:24:25 PST
Mark Lam
Comment 2 2019-01-24 16:45:30 PST
Comment on attachment 360046 [details] Patch r=me
Yusuke Suzuki
Comment 3 2019-01-24 16:50:09 PST
Radar WebKit Bug Importer
Comment 4 2019-01-24 16:52:33 PST
Note You need to log in before you can comment on or make changes to this bug.